--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/style.css">
-    <title>Ejercicios Basicos JS</title>
+    <title>Ejercicios Basicos JS 2</title>
 </head>
 <body>
     <h1>NIVEL 2</h1>
